[package]
name = "json-highlight-writer"
version = "0.1.0"
authors = ["Gidi Meir Morris <gidi@gidi.io>"]
edition = "2018"
description = "A writer for json-rust designs to treat slices of json differently when writing an entire json object"
license = "MIT"


[lib]
name = "json_highlight_writer"
path = "src/lib.rs"

[dependencies]
json = "0.11.13"
colored = "1.7"
